# gravyvalet

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  TODO.txt  _TODO.md  _TODO.txt  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: run_gravyvalet_tests.yml
addon_imps/: __init__.py
addon_imps/citations/: mendeley.py  zotero_org.py
addon_imps/computing/: __init__.py  boa.py
addon_interfaces/: _examples.py
addon_service/: README.md  __init__.py  admin.py  apps.py  authentication.py  exception_handler.py  listeners.py  models.py  oauth_utlis.py  serializer_fields.py  serializers.py  tasks.py  urls.py  views.py
addon_toolkit/: README.md  __init__.py  addon_capability.py  addon_operation_declaration.py  addon_operation_results.py  async_utils.py  capabilities.py  capability.py  category.py  constrained_aiohttp.py  constrained_http.py  credentials.py  cursor.py  declarator.py  exceptions.py  imp.py  interface.py  iri_utils.py  json_arguments.py  namespaces.py  operation.py  protocol.py  storage.py  typing.py
app/: asgi.py  authentication.py  celery.py  env.py  settings.py  urls.py  wsgi.py
charon/: apps.py  models-djangostyle.py  models.py  reference.py  serializer.py  settings.py  urls.py  utils.py  views.py
db/: charon.json
gravyvalet/: asgi.py  settings.py  urls.py  wsgi.py
gravyvalet_code_docs/: __init__.py  build.py
requirements/: dev-requirements.txt  release.txt  requirements.txt
(+305 files in other folders)
