[tool.poetry]
name = "gravyvalet"
version = "0.1.0"
description = "gravyvalet fetches, serves, and holds small ladlefuls of precious bytes."
authors = []
license = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.7"
daphne = "4.1.2"
psycopg = {version = ">=3.1.8", extras = ["c"]}
djangorestframework = "3.14.0"
djangorestframework-jsonapi = "6.1.0"
django-cors-headers = "4.3.1"
django-filter = "^24.3"
celery = "5.4.0"
jsonschema = "4.21.1"
aiohttp = "3.9.3"
pyjwe = "1.0.0"
cryptography = "42.0.7"
boto3 = "1.34"
boa-api = "^0.1.14"


[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.1"
responses = "^0.25.3"
flake8 = "^7.1.1"
isort = "^5.13.2"
pre-commit = "^3.8.0"
pdoc = "14.5.1"

[tool.poetry.group.release.dependencies]
sentry-sdk = "2.7.1"
newrelic = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
